[gd_scene load_steps=9 format=3 uid="uid://b3bmnk2v1d4fq"]

[ext_resource type="Script" path="res://script/Powerup.gd" id="1_f7ko4"]
[ext_resource type="AudioStream" uid="uid://cogyry4oj3a5v" path="res://assets/audio/PowerupCollect.wav" id="2_48n06"]

[sub_resource type="Curve" id="Curve_bq5aw"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.264339, 1), 0.0, 0.0, 0, 0, Vector2(0.603491, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_x0p2a"]
curve = SubResource("Curve_bq5aw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5d1od"]
emission_shape = 3
emission_box_extents = Vector3(10, 10, 1)
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 38.68
damping_max = 38.68
scale_min = 5.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_x0p2a")
color = Color(0.101961, 1, 0, 1)

[sub_resource type="Gradient" id="Gradient_3dgof"]
colors = PackedColorArray(0.101961, 1, 0, 0.34902, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rufmc"]
gradient = SubResource("Gradient_3dgof")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ejobn"]
emission_shape = 3
emission_box_extents = Vector3(10, 10, 1)
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 8.02
damping_max = 8.02
scale_min = 4.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_rufmc")

[node name="Powerup" type="Node2D"]
script = ExtResource("1_f7ko4")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="Area" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PackedVector2Array(0, -20, 20, 0, 0, 20, -20, 0)

[node name="ShapePieces" type="Node2D" parent="."]
z_index = 2
scale = Vector2(2, 2)

[node name="Shape" type="Polygon2D" parent="ShapePieces"]
polygon = PackedVector2Array(0, -10, 0, -8, -8, 0, 0, 8, 8, 0, 0, -8, 0, -10, 10, 0, 0, 10, -10, 0)

[node name="Shape6" type="Polygon2D" parent="ShapePieces"]
position = Vector2(6, 0)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-2, 2, -4, 2, -4, -1, -3, -3, -2, -1)

[node name="Shape7" type="Polygon2D" parent="ShapePieces"]
position = Vector2(3, -3)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-2, 2, -4, 2, -4, -1, -3, -3, -2, -1)

[node name="Shape8" type="Polygon2D" parent="ShapePieces"]
position = Vector2(3, 3)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-2, 2, -4, 2, -4, -1, -3, -3, -2, -1)

[node name="Shape9" type="Polygon2D" parent="ShapePieces"]
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-2, 2, -4, 2, -4, -1, -3, -3, -2, -1)

[node name="OutlineShape" type="Polygon2D" parent="ShapePieces"]
scale = Vector2(1.25, 1.25)
color = Color(0, 1, 0.0470588, 0.396078)
polygon = PackedVector2Array(0, -10, 0, -8, -8, 0, 0, 8, 8, 0, 0, -8, 0, -10, 10, 0, 0, 10, -10, 0)

[node name="CollectParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_5d1od")
lifetime = 0.7
one_shot = true
explosiveness = 1.0

[node name="DespawnParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_ejobn")
lifetime = 2.0
one_shot = true
explosiveness = 1.0

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CollectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_48n06")
volume_db = 10.0

[connection signal="area_entered" from="CollisionArea" to="." method="collision"]
[connection signal="timeout" from="FlashTimer" to="." method="flicker"]
[connection signal="timeout" from="DespawnTimer" to="." method="despawn"]
